2017-07-31  Markus Gans  <guru.mail@muenster.de>
	* New methods to retrieve or modify FListViewItem text or 
	  a FListView column text for a specific column

2017-07-28  Markus Gans  <guru.mail@muenster.de>
	* Possibility for a FListView column to set 
	  the alignment (left, center or right)

2017-07-23  Markus Gans  <guru.mail@muenster.de>
	* Check an object with isInstanceOf(...) whether it is 
	  an instance of a specified class

2017-07-18  Markus Gans  <guru.mail@muenster.de>
	* New Widget class FListView (filled with FListViewItem) 
	  to allow a multi-column data view
        * Add the listview example to demonstrate FListView

2017-07-11  Markus Gans  <guru.mail@muenster.de>
	* New class FTermBuffer to buffer terminal outputs
	* Add the possibility to print from the terminal buffer

2017-07-03  Markus Gans  <guru.mail@muenster.de>
	* Use more static const variables where it makes sense

2017-06-26  Markus Gans  <guru.mail@muenster.de>
	* FString::rtrim() and FString::left() now return an FString 
	  object with the correct character length

2017-06-18  Markus Gans  <guru.mail@muenster.de>
	* Move the dragScroll enumeration into the fc namespace

2017-06-11  Markus Gans  <guru.mail@muenster.de>
	* New method FObject::isWidget()
	* Non-widget objects inherit from FObjects will no longer 
	  affect the widget lists

2017-06-05  Markus Gans  <guru.mail@muenster.de>
	* The focus and active flag is set centrally in FWidget

2017-05-20  Markus Gans  <guru.mail@muenster.de>
	* Recalculate the horizontal FListBox scroll bar size 
	  on lazy conversion

2017-05-19  Markus Gans  <guru.mail@muenster.de>
	* FListBox: Import of data from a container via 
	  "lazy conversion" during item print

2017-04-23  Markus Gans  <guru.mail@muenster.de>
	* Import of data from a standard container in FListBox 
	  is now possible
	* The new "listbox" example shows the handling with 
	  standard containers

2017-04-17  Markus Gans  <guru.mail@muenster.de>